--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -64,15 +64,15 @@ a, a:hover {
     line-height: normal;
     font-weight: 700;
     text-align: center;
-    color: #ffffff; }
+    color: #fff; }
 
 .title-h2 {
-    font-size: 50px;
+    font-size: 35px;
     font-family: "PoppinsBold", sans-serif;
-    line-height: 110px;
+    line-height: normal;
     font-weight: 700;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .title-h3 {
     font-size: 30px;
@@ -80,15 +80,15 @@ a, a:hover {
     line-height: 40px;
     font-weight: 600;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .title-h4 {
-    font-size: 35px;
+    font-size: 20px;
     font-family: "PoppinsBold", sans-serif;
     line-height: normal;
     font-weight: 600;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .paragraph-1 {
     font-size: 65px;
@@ -96,7 +96,7 @@ a, a:hover {
     line-height: 80px;
     font-weight: 600;
     text-align: center;
-    color: #ffffff; }
+    color: #fff; }
 
 .paragraph-2 {
     font-size: 30px;
@@ -104,7 +104,7 @@ a, a:hover {
     line-height: 50px;
     font-weight: 300;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .paragraph-3 {
     font-size: 25px;
@@ -112,23 +112,22 @@ a, a:hover {
     line-height: 35px;
     font-weight: 300;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .paragraph-4 {
-    font-size: 30px;
+    font-size: 20px;
     font-family: "PoppinsLight", sans-serif;
     line-height: normal;
     font-weight: 300;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .link-to {
-    font-size: 30px;
     font-family: "PoppinsSemiBold", sans-serif;
     line-height: normal;
     font-weight: 300;
     text-align: center;
-    color: #000000; }
+    color: #000; }
 
 .btn-primary {
     font-size: 18px;
@@ -136,7 +135,7 @@ a, a:hover {
     line-height: normal;
     font-weight: 500;
     text-align: center;
-    color: #000000;
+    color: #000;
     width: 100%;
     max-width: 398px;
     min-width: 250px;
@@ -158,18 +157,16 @@ a, a:hover {
     max-width: 1920px;
     margin: 0 auto; }
 
-.block-child-wrap {
+.empoweringPay {
     width: 100%;
-    max-width: 1364.15px;
+    max-width: 1364px;
     padding: 0 15px;
     margin: 0 auto; }
 
 /*...welcome block...*/
 .welcome-wrap {
-    /*background: url("../images/landingpage_bg.png") center center no-repeat;*/
     -webkit-background-size: cover;
     background: linear-gradient( rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) ), url('../images/landingpage_bg.png');
-    /*-webkit-background-size: cover;*/
     -moz-background-size:  cover;
     -o-background-size: cover;
     background-size: cover;
@@ -196,7 +193,9 @@ a, a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1088px !important;
+    max-width: 1088px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 .partnered-wrap .partnered__paragraph {
     text-align: left;
@@ -212,35 +211,23 @@ a, a:hover {
 /*...end partnered...*/
 /*...works...*/
 .works-wrap {
-    padding: 84px 0 95px;
+    padding: 90px 0 95px;
     background-color: #EDEDED; }
 .works {
-    max-width: 1088px !important;
+    max-width: 1088px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 
 .works-title {
-    margin-bottom: 47px;
+    margin-bottom: 30px;
 }
-/*.works-title span {*/
-    /*border-bottom: 3px solid #000000;*/
-    /*display: inline-block;*/
-    /*line-height: 0.85;*/
-    /*text-shadow: 2px 2px white, 2px -2px white, -2px 2px white,  -2px -2px white; */
-/*}*/
 
 .work-list {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-    -webkit-justify-content: space-between;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    -webkit-box-align: flex-start;
-    -webkit-align-items: flex-start;
-    -ms-flex-align: flex-start;
-    align-items: flex-start; }
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-items: center;
+}
 
 .work-item {
     width: 300px;
@@ -284,13 +271,14 @@ a, a:hover {
 .work-item .work-item__title {
     margin-bottom: 17px; }
 .work-item__desc {
+    min-height: 140px;
     width: 92%;
 }
 
 /*...end works...*/
 /*...empoweringPay...*/
 .empoweringPay-wrap {
-    padding: 121.25px 0 160px;
+    padding: 65px 0 100px;
     overflow: hidden;
     position: relative; }
 .empoweringPay-wrap .empoweringPay-bg-icon {
@@ -305,15 +293,15 @@ a, a:hover {
     width: 100%;
     margin: 0 auto; }
 .empoweringPay-title {
-    margin-bottom: 65px; }
+    margin-bottom: 40px; }
 
 .empoweringPay-section .empoweringPay__article {
-    margin-bottom: 65px; }
+    margin-bottom: 40px; }
 .empoweringPay-section .empoweringPay__article:last-child {
     margin-bottom: 0;
 }
 .empoweringPay-section .empoweringPay__article .empoweringPay__article-title {
-    margin-bottom: 20px; }
+    margin-bottom: 10px; }
 
 .empoweringPay_btn {
     display: block;
@@ -333,12 +321,12 @@ a, a:hover {
     }
 }
 @media screen and (max-width: 1366px) {
-    .title-h2 {
-        font-size: 50px; }
+    /* .title-h2 {
+        font-size: 50px; } */
     .title-h3 {
         font-size: 28px; }
-    .title-h4 {
-        font-size: 26px; }
+    /* .title-h4 {
+        font-size: 26px; } */
     .paragraph-1 {
         font-size: 40px;
         line-height: 45px;
@@ -346,20 +334,17 @@ a, a:hover {
     .paragraph-2 {
         font-size: 26px;
         line-height: 50px; }
-    .paragraph-3 {
-        font-size: 25px;
-        line-height: 35px; }
-    .paragraph-4 {
-        font-size: 25px; }
+    /* .paragraph-4 {
+        font-size: 25px; } */
 }
 
 @media screen and (max-width: 1000px) {
-    .title-h2 {
-        font-size: 40px; }
+    /* .title-h2 {
+        font-size: 40px; } */
     .title-h3 {
         font-size: 20px; }
-    .title-h4 {
-        font-size: 25px; }
+    /* .title-h4 {
+        font-size: 25px; } */
     .paragraph-1 {
         font-size: 35px;
         line-height: 45px;
@@ -370,42 +355,23 @@ a, a:hover {
     .paragraph-3 {
         font-size: 20px;
         line-height: 35px; }
-    .paragraph-4 {
-        font-size: 20px; }
-    .link-to {
-        font-size: 24px; }
+    /* .paragraph-4 {
+        font-size: 20px; } */
+    /* .link-to {
+        font-size: 24px; } */
     .btn-primary {
         height: 50px; } }
 
 @media screen and (max-width: 920px) {
     .work-list {
-        -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-        -webkit-box-pack: center;
-        -webkit-justify-content: center;
-        -ms-flex-pack: center;
-        justify-content: center; } }
+        grid-template-columns: 1fr;
+    } }
 
 @media screen and (max-width: 765px) {
     .welcome-wrap {
         padding: 140px 0;
     }
-    .title-h2 {
-        line-height: 60px;
-    }
 }
-
-/*@media screen and (max-width: 480px) {*/
-    /*.works-title {*/
-        /*text-decoration: underline; }*/
-    /*.works-title span {*/
-        /*border-bottom: none;*/
-        /*display: inline;*/
-        /*line-height: normal;*/
-        /*text-shadow: none; */
-    /*} */
-/*}*/
 
 @media screen and (max-width: 425px) {
     .partnered-wrap .partnered__paragraph {
