add sign up form and privacy and terms docs

--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -280,6 +280,10 @@ h1 {
   align-items: center;
 }
 
+.feedback_thankyou {
+  display: none;
+}
+
 footer {
   padding: 20px 0 10px;
   background: #3c465a;
