fix styles for the home page

--- a/src/css/home_uk.css
+++ b/src/css/home_uk.css
@@ -69,18 +69,30 @@ h1 {
 }
 
 /*...forWhomItWorks...*/
-
-.forWhomItWorks {
-  max-width: 1650px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
+.forWhomItWorks-wrap {
+  background: linear-gradient( to right, #fff 0%, #fff 50%, #3c465a 50%, #3c465a 100% );
+  position: relative;
 }
 
-/* .part1__wrap-text {
-  width: 76%;
+.forWhomItWorks-wrap::after {
+  content: '';
+  background: url(../images/big-o.svg) no-repeat;
+  background-size: cover;
+  width: 400px;
+  height: 498px;
+  z-index: 1;
+  position: absolute;
+  bottom: -185px;
+  right: -50px;
+}
+
+.forWhomItWorks {
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+  max-width: 1380px;
   margin: 0 auto;
-} */
+}
 
 .forWhomItWorks h2 {
   max-width: 658px;
@@ -98,6 +110,11 @@ h1 {
   font-size: 25px;
 }
 
+.forWhomItWorks_desc,
+.forWhomItWorks_img_bg {
+  max-width: 580px;
+}
+
 .forWhomItWorks_text {
   color: #fff;
   font-weight: 700;
@@ -111,7 +128,7 @@ h1 {
 }
 
 .forWhomItWorks > div:nth-of-type(1) {
-  background: url(../images/dress.svg) bottom 60px right 90px no-repeat;
+  background: url(../images/dress.svg) bottom 60px right 100px no-repeat;
   background-size: 150px;
   position: relative;
   padding: 145px 15px 168px;
@@ -120,22 +137,22 @@ h1 {
 .forWhomItWorks div:nth-of-type(2) {
   position: relative;
   background-color: #3c465a;
-  padding: 149px 0 146px;
+  padding: 149px 15px 146px 75px;
   z-index: 0;
   overflow: hidden;
 }
 
 .forWhomItWorks_image {
   position: absolute;
-  bottom: -125px;
-  right: -59px;
+  bottom: -210px;
+  right: -110px;
   width: 400px;
   height: 498px;
   z-index: 1;
 }
 .forWhomItWorks_img_bg {
   height: 100%;
-  width: 70%;
+  /* width: 70%; */
   /*background:url(../images/big-o.svg) bottom -70px right -65px no-repeat;*/
   /*background-size: 498px 400px;*/
   color: #ffffff;
@@ -392,7 +409,7 @@ footer a {
   }
 
   .forWhomItWorks_img_bg {
-    width: 77%;
+    /* width: 77%; */
     color: #ffffff;
     font-size: 25px;
     letter-spacing: 3.5px;
@@ -453,7 +470,7 @@ footer a {
   }
 
   .feedback_btn_block {
-    padding-top: 85px;
+    padding-top: 45px;
     justify-content: flex-start;
     align-items: center;
   }
@@ -483,7 +500,7 @@ footer a {
   }
 }
 
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1280px) {
   .feedback {
     grid-template-columns: 1fr;
     grid-row-gap: 80px;
@@ -502,13 +519,13 @@ footer a {
     width: 100%;
   }
 }
-@media screen and (max-width: 925px) {
-  .forWhomItWorks_img_bg {
-    width: 80%;
-  }
-}
 
-@media screen and (max-width: 810px) {
+@media screen and (max-width: 1280px) {
+  .forWhomItWorks-wrap {
+    background: #fff;
+    overflow: hidden;
+  }
+
   .forWhomItWorks {
     display: flex;
     flex-direction: column;
@@ -518,18 +535,20 @@ footer a {
     width: 100%;
     padding: 15px;
   }
+
   .forWhomItWorks h2 {
     width: 75%;
     line-height: 48px;
     font-size: 30px;
     margin: 0 auto 30px;
   }
-  .part1__wrap-text {
-    text-align: center;
-  }
+
+  .forWhomItWorks_desc,
   .forWhomItWorks_img_bg {
+    max-width: initial;
     text-align: center;
   }
+
   .forWhomItWorks > div:nth-of-type(1) {
     padding: 75px 0 168px;
   }
